feat: add swagger to method create
