# docs/swagger.json
@@ -461,6 +461,44 @@
                 }
             }
         },
+        "/product-images": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product-images"
+                ],
+                "summary": "Tambah image baru",
+                "parameters": [
+                    {
+                        "description": "Product Images Input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ProductImagesInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/product-images/{product_id}": {
             "get": {
                 "produces": [
@@ -1328,6 +1366,17 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ProductImagesInput": {
+            "type": "object",
+            "properties": {
+                "path": {
+                    "type": "string"
+                },
+                "product_id": {
+                    "type": "integer"
                 }
             }
         },
